--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,13 +17,9 @@
 
     <div class="footer-right">
       <p class="mb-0">
-        <!-- Powered by -->
-        <!-- <a href="https://jekyllrb.com" target="_blank" rel="noopener">Jekyll</a> -->
-        <!-- with -->
-        <!-- <a href="https://github.com/cotes2020/jekyll-theme-chirpy" -->
-        <!--   target="_blank" rel="noopener">Chirpy</a> -->
-        <!-- theme. -->
-        Blog design: <a href="https://github.com/cotes2020/jekyll-theme-chirpy">Chirpy Jekyll Theme</a>
+        Blog design:
+        <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank" rel="noopener">Chirpy</a>
+        Jekyll Theme
       </p>
     </div>
 
