--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,4 +71,8 @@
 
   {% include js-selector.html %}
 
+{% if site.google_analytics and jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
+
 </head>
