--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -127,3 +127,6 @@ layout: default
   </div> <!-- .col-* -->
 
 </div> <!-- .row -->
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2163036847048407"
+     crossorigin="anonymous"></script>
